# MSP430-Emulator

./: .gitignore  CMakeLists.txt  main.c  main.h  server  testfn.c  testfn.h
430x2_firm/blink/: blink.c  disassembly.txt  dissassembly.txt
debugger/: CMakeLists.txt  debugger.c  debugger.h  disassembler.c  register_display.c
debugger/websockets/: CMakeLists.txt  emu_server.c
devices/: CMakeLists.txt  utilities.c  utilities.h
devices/cpu/: CMakeLists.txt  decoder.c  decoder.h  flag_handler.c  flag_handler.h  formatI.c  formatI.h  formatII.c  formatII.h  formatIII.c  formatIII.h  opcodes.h  registers.c  registers.h
devices/memory/: CMakeLists.txt  memspace.c  memspace.h
devices/peripherals/: CMakeLists.txt  bcm.c  timer_a.c  usci.c
